--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.14.11",
     "parse": "~1.8.0",
     "parse-server": "*"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "engines": {
     "node": ">=4.3"
