--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "parse-server-example",
-  "version": "1.4.0",
-  "description": "An example Parse API server using the parse-server module",
+  "name": "parseserver-expressjs",
+  "version": "1.1.0",
+  "description": "A Boilerplate for Parse Server and ExpressJS.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ParsePlatform/parse-server-example"
+    "url": "https://github.com/emjimadhu/parseserver-expressjs.git"
   },
+  "keywords": [
+    "parse",
+    "parseserver",
+    "boilerplate",
+    "nodejs",
+    "expressjs"
+  ],
+  "author": "Em Ji Madhu <batman@emjimadhu.me>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/emjimadhu/parseserver-expressjs/issues"
+  },
+  "homepage": "https://github.com/emjimadhu/parseserver-expressjs/blob/master/README.md",
   "dependencies": {
-    "dotenv": "^4.0.0",
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "morgan": "^1.9.0",
